--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top"><span><img src="{{site.baseurl}}/assets/img/kcc-logo.svg" class="logo" alt=""></span></a>
+    <a class="navbar-brand js-scroll-trigger" href="#page-top"><span><img src="{{site.baseurl}}/assets/img/cavaliers-logo-shadow.svg" class="logo" alt=""></span></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
