--- a/assets/scss/3-modules/_navbar.scss
+++ b/assets/scss/3-modules/_navbar.scss
@@ -44,7 +44,7 @@
 @media (min-width:992px) {
   #mainNav {
     padding-top: 25px;
-    padding-bottom: 25px;
+    padding-bottom: 5px;
     -webkit-transition: padding-top .3s, padding-bottom .3s;
     -moz-transition: padding-top .3s, padding-bottom .3s;
     transition: padding-top .3s, padding-bottom .3s;
@@ -52,11 +52,11 @@
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    font-size: 1.75em;
+    font-size: 1em;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
     transition: all .4s;
-    transform: scale(1.4, 1.4);
+    transform: scale(3.2, 3.2);
   }
   #mainNav .navbar-nav .nav-item .nav-link {
     padding: 1.1em 1em!important;
@@ -74,7 +74,8 @@
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
-    padding: 12px 0;
-    transform: scale(1, 1);
+    transform: scale(1.8, 1.8);
+    position: absolute;
+    margin-top: 10px;
   }
 }
