Remove /img/logos/ dir and place contents up a dir in /img/
Fix resulting broken img links in clients.html module

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -4,22 +4,22 @@
     <div class="row">
       <div class="col-md-3 col-sm-6">
         <a href="#">
-          <img class="img-fluid d-block mx-auto" src="{{site.baseurl}}/assets/img/logos/envato.jpg" alt="">
+          <img class="img-fluid d-block mx-auto" src="{{site.baseurl}}/assets/img/envato.jpg" alt="">
         </a>
       </div>
       <div class="col-md-3 col-sm-6">
         <a href="#">
-          <img class="img-fluid d-block mx-auto" src="{{site.baseurl}}/assets/img/logos/designmodo.jpg" alt="">
+          <img class="img-fluid d-block mx-auto" src="{{site.baseurl}}/assets/img/designmodo.jpg" alt="">
         </a>
       </div>
       <div class="col-md-3 col-sm-6">
         <a href="#">
-          <img class="img-fluid d-block mx-auto" src="{{site.baseurl}}/assets/img/logos/themeforest.jpg" alt="">
+          <img class="img-fluid d-block mx-auto" src="{{site.baseurl}}/assets/img/themeforest.jpg" alt="">
         </a>
       </div>
       <div class="col-md-3 col-sm-6">
         <a href="#">
-          <img class="img-fluid d-block mx-auto" src="{{site.baseurl}}/assets/img/logos/creative-market.jpg" alt="">
+          <img class="img-fluid d-block mx-auto" src="{{site.baseurl}}/assets/img/creative-market.jpg" alt="">
         </a>
       </div>
     </div>
