Add a working dropdown nav to nivigation module

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,16 +8,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
-        <li class="nav-item dropdown navbar-collapse">
-          <a class="nav-link js-scroll-trigger dropdown-toggle" href="#services" id="navbardrop" data-toggle="dropdown">
-            Services
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Link 1</a>
-            <a class="dropdown-item" href="#">Link 2</a>
-            <a class="dropdown-item" href="#">Link 3</a>
-          </div>
+        <li class="dropdown nav-item nav-padding"><a href="#" class="dropdown-toggle nav-link pad-left js-scroll-trigger" data-toggle="dropdown" role="button" aria-expanded="false">Services<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a class="drop-item" href="#">2d Design</a></li>
+            <li><a class="drop-item" href="#">3d Design</a></li>
+            <li><a class="drop-item" href="#">Web Development</a></li>
+            <li class="divider"></li>
+            <li><a class="drop-item" href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a class="drop-item" href="#">One more separated link</a></li>
+          </ul>
         </li>
+      </ul>
+      <ul class="navbar-nav text-uppercase ml-auto">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="/nav-test/"><span>Mega&#160;Nav</span></a>
         </li>
