Add styling to navbar classes to open navbar on mouse hover of dropwdown menus

--- a/assets/scss/3-modules/_navbar.scss
+++ b/assets/scss/3-modules/_navbar.scss
@@ -79,3 +79,8 @@
     margin-top: 10px;
   }
 }
+
+/* shows the dropdown menu on hover */
+.navbar .dropdown:hover .dropdown-menu, .navbar .dropdown .dropdown-menu:hover {
+ display:block!important;
+}
