--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,6 +20,7 @@
 
 /* Components */
 @import "3-modules/navbar";
+@import "3-modules/global-nav";
 
 /* Typography */
 @import "1-base/typography";
