Attempt at custom mega menu class and styling for full width dropdowns
Needs work

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,16 +9,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
-        <li class="dropdown nav-item nav-padding"><a href="#" class="dropdown-toggle nav-link pad-left js-scroll-trigger" data-toggle="dropdown" role="button" aria-expanded="false">Services<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a class="drop-item" href="#">2d Design</a></li>
-            <li><a class="drop-item" href="#">3d Design</a></li>
-            <li><a class="drop-item" href="#">Web Development</a></li>
-            <li class="divider"></li>
-            <li><a class="drop-item" href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a class="drop-item" href="#">One more separated link</a></li>
-          </ul>
+        <li class="dropdown nav-item nav-padding"><a href="#" class="dropdown-toggle nav-link pad-left js-scroll-trigger" data-toggle="dropdown" role="button" aria-expanded="false">Sports<span class="caret"></span></a>
+          <div class="full-dropdown-menu" role="menu">
+            <a class="drop-item" href="#">2d Design</a>
+            <a class="drop-item" href="#">3d Design</a>
+            <a class="drop-item" href="#">Web Development</a>
+            <a class="drop-item" href="#">Separated link</a>
+            <a class="drop-item" href="#">One more separated link</a>
+          </div>
         </li>
       </ul>
       <ul class="navbar-nav text-uppercase ml-auto">
