--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 {% include head.html %}
-  {% include navigation.html %}
+  {% include global-nav.html %}
+  {% include mega-nav.html %}
   {% include header.html %}
   {% include services.html %}
 {% include foot.html %}
