--- a/assets/scss/3-modules/_global-nav.scss
+++ b/assets/scss/3-modules/_global-nav.scss
@@ -1,5 +1,5 @@
 .global-nav {
-  background-color: #c61f48;
+  background-color: $primary-red;
   margin-left: 0;
   margin-right: 0;
   max-width: 100%;
@@ -9,6 +9,7 @@
   padding-top: 10px;
   width: 100%;
   height: 56px;
+  position: fixed;
 }
 
 .kcc-logo {
