Change dropdown menu background color to gray and dropdown links to black text

--- a/assets/scss/3-modules/_navbar.scss
+++ b/assets/scss/3-modules/_navbar.scss
@@ -71,5 +71,9 @@
 }
 
 .dark-text {
-  color: #000000!important;
+  color: #000000 !important;
+}
+
+.dark-text:hover {
+  color: #818181 !important;
 }
