Change Mega Nav Sports placeholder image to 4:3 ratio placeholder
Add dark text class to all Sports dropdown links

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -20,9 +20,8 @@
             <div class="row">
               <div class="col-md-4 d-none d-md-block">
                 <a href="">
-                  <img src="https://dummyimage.com/200x100/ccc/000&text=image+link" alt="" class="img-fluid">
+                  <img src="assets/img/nav-1.png" alt="" class="img-fluid">
                 </a>
-                <p class="text-white">Short image call to action</p>
               </div>
               <!-- /.col-md-4  -->
               <div class="col-md-8">
@@ -30,114 +29,114 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/baseball">Baseball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball">Baseball</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/baseball#news">News</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#news">News</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/baseball#schedule">Schedule</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#schedule">Schedule</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/baseball#roster">Roster</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#roster">Roster</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/baseball#stats">Stats</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#stats">Stats</a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/mbasketball">Men&#39;s Basketball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball">Men&#39;s Basketball</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/mbasketball#news">News</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#news">News</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/mbasketball#schedule">Schedule</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#schedule">Schedule</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/mbasketball#roster">Roster</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#roster">Roster</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/mbasketball#stats">Stats</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#stats">Stats</a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer">Women&#39;s Basketball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer">Women&#39;s Basketball</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer#news">News</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#news">News</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer#stats">Stats</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#stats">Stats</a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer">Soccer</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer">Soccer</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer#news">News</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#news">News</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/soccer#stats">Stats</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#stats">Stats</a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/softball">Softball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball">Softball</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/softball#news">News</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#news">News</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/softball#roster">Roster</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#roster">Roster</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/softball#stats">Stats</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#stats">Stats</a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/volleyball">Volleyball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball">Volleyball</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/volleyball#news">News</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#news">News</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/volleyball#roster">Roster</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#roster">Roster</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad" href="http://athletics.kcc.edu/volleyball#stats">Stats</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#stats">Stats</a>
                     </div>
                   </div>
                 </li>
