--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -20,7 +20,7 @@
             <div class="row">
               <div class="col-md-4 d-none d-md-block">
                 <a href="">
-                  <img src="assets/img/nav-1.png" alt="" class="img-fluid">
+                  <img src="assets/img/nav-1.png" alt="" class="img-fluid nav-img">
                 </a>
               </div>
               <!-- /.col-md-4  -->
