--- a/assets/scss/3-modules/_navbar.scss
+++ b/assets/scss/3-modules/_navbar.scss
@@ -77,3 +77,27 @@
 .dark-text:hover {
   color: #818181 !important;
 }
+
+.nav-img {
+  margin-top: 20px;
+  margin-left: -10px;
+}
+
+@media screen and (min-width: 1100px) {
+  .nav-img {
+    margin-left: -20px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .nav-img {
+    margin-left: -80px;
+  }
+}
+
+.no-pad {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-top: 0;
+}
