--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,7 +5,7 @@
 @import "fonts";
 
 /* Components */
-@import "3-modules/navbar";
+@import "3-modules/mega-nav";
 @import "3-modules/global-nav";
 
 /* Layouts */
