--- a/assets/scss/3-modules/_global-nav.scss
+++ b/assets/scss/3-modules/_global-nav.scss
@@ -10,8 +10,17 @@
   width: 100%;
   height: 56px;
   position: fixed;
+  z-index: 1000;
 }
 
 .kcc-logo {
   max-width: 100%;
+}
+
+.form-inline {
+  float: right;
+}
+
+.local-search {
+  border-radius: 1.5em;
 }
