Add comments for beginning and end of the Sports Dropdown Menu
Delete blank lines from code

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -3,7 +3,6 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
@@ -13,9 +12,8 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Sports
         </a>
+        <!--  Sports Menu Dropdown  -->
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-
           <div class="container drop-pad">
             <div class="row">
               <div class="col-md-4 d-none d-md-block">
@@ -143,12 +141,9 @@
               </ul>
               </div>
               <!-- /.col-md-8  -->
-
             </div>
           </div>
-          <!--  /.container  -->
-
-
+          <!--  End of Sports Menu Dropdown  -->
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -156,8 +151,6 @@
           Category 2
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-
           <div class="container">
             <div class="row">
               <div class="col-md-4">
@@ -243,7 +236,6 @@
               </div>
               <!-- /.col-md-4  -->
               <div class="col-md-4">
-
                 <a href="">
                   <img src="https://dummyimage.com/200x100/ccc/000&text=image+link" alt="" class="img-fluid">
                 </a>
@@ -254,17 +246,12 @@
             </div>
           </div>
           <!--  /.container  -->
-
-
         </div>
       </li>
-
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
-
-
 </nav>
