Change intro lead-in text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,8 @@
 <header class="masthead">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-lead-in editable">Welcome To Our Website!</div>
+      <div class="intro-lead-in editable">Welcome To KCC Athletics!</div>
       <div class="intro-heading text-uppercase editable">It's Nice To Meet You</div>
-      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
     </div>
   </div>
 </header>
