Comment out the global-nav search box

--- a/_includes/global-nav.html
+++ b/_includes/global-nav.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-lg-12">
       <a href="/"><img src="assets/img/kankakee-community-college-word-logo.svg" class="img-responsive kcc-logo" alt="Kankakee Community College link to home page"></a>
-      <form class="form-inline">
+      <!--  <form class="form-inline">
         <input class="form-control mr-sm-2 local-search" type="search" placeholder="&#xF002; Search Athletics" aria-label="Search">
-      </form>
+      </form>  -->
     </div>
   </div>
 </div>
