Adjust styles to Hero banner's text
Place media queries directly under the the class they apply to

Comment the classes

--- a/assets/scss/4-layout/_header.scss
+++ b/assets/scss/4-layout/_header.scss
@@ -1,6 +1,4 @@
 header.masthead {
-  text-align: center;
-  color: #fff;
   background-image: url(/assets/img/header-bg.jpg);
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -9,35 +7,42 @@ header.masthead {
   -moz-background-size: 100% auto;
   -o-background-size: 100% auto;
   background-size: 100% auto;
+  color: #fff;
   margin-top: 112px;
+  text-align: center;
 }
 
+// Hero banner intro text's container:
 header.masthead .intro-text {
-  padding-top: 150px;
-  padding-bottom: 100px
+  padding-bottom: 40px;
+  padding-top: 60px;
 }
-
-header.masthead .intro-text .intro-lead-in {
-  font-size: 22px;
-  font-style: italic;
-  line-height: 22px;
-  margin-bottom: 25px;
-  font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif
+@media screen and (min-width: 480px) {
+  header.masthead .intro-text {
+    padding-bottom: 80px;
+    padding-top: 130px;
+  }
 }
-
-header.masthead .intro-text .intro-heading {
-  font-size: 50px;
-  font-weight: 700;
-  line-height: 50px;
-  margin-bottom: 25px;
-  font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif
-}
-
-@media (min-width:768px) {
+@media screen and (min-width: 768px) {
   header.masthead .intro-text {
     padding-bottom: 200px;
-    padding-top: 300px;
+    padding-top: 200px;
   }
+}
+
+// Hero banner's italic intro text:
+header.masthead .intro-text .intro-lead-in {
+  font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 1.1em;
+  font-style: italic;
+  line-height: 1.2em;
+}
+@media screen and (min-width: 480px) {
+  header.masthead .intro-text .intro-lead-in {
+    font-size: 1.4em;
+  }
+}
+@media screen and (min-width: 768px) {
   header.masthead .intro-text .intro-lead-in {
     font-size: 40px;
     font-style: italic;
@@ -45,8 +50,30 @@ header.masthead .intro-text .intro-heading {
     margin-bottom: 25px;
     font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif
   }
+}
+
+// Hero banner's main heading text:
+header.masthead .intro-text .intro-heading {
+  font-size: 1.4em;
+  font-weight: 700;
+  line-height: 1.2em;
+  margin-bottom: 25px;
+  margin-top: 15px;
+  font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif
+}
+@media screen and (min-width: 480px) {
   header.masthead .intro-text .intro-heading {
-    font-size: 75px;
+    font-size: 2em;
+  }
+}
+@media screen and (min-width: 600px) {
+  header.masthead .intro-text .intro-heading {
+    font-size: 2.4em;
+  }
+}
+@media (min-width:768px) {
+  header.masthead .intro-text .intro-heading {
+    font-size: 3.4em;
     font-weight: 700;
     line-height: 75px;
     margin-bottom: 50px;
