--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -5,11 +5,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <!--  Sports  -->
       <li class="nav-item dropdown active-nav">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Sports
-        </a>
-        <!--  Sports Menu Dropdown  -->
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sports</a>
+        <!--  Sports dropdown menu  -->
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <div class="container drop-pad">
             <div class="row">
@@ -24,7 +23,7 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball">Baseball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball"><strong>Baseball</strong></a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
                       <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#news">News</a>
@@ -43,7 +42,7 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball">Men&#39;s Basketball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball"><strong>Men&#39;s Basketball</strong></a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
                       <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#news">News</a>
@@ -62,7 +61,7 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer">Women&#39;s Basketball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer"><strong>Women&#39;s Basketball</strong></a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
                       <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#news">News</a>
@@ -81,7 +80,7 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer">Soccer</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer"><strong>Soccer</strong></a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
                       <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#news">News</a>
@@ -100,7 +99,7 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball">Softball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball"><strong>Softball</strong></a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
                       <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#news">News</a>
@@ -119,7 +118,7 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball">Volleyball</a>
+                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball"><strong>Volleyball</strong></a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
                       <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#news">News</a>
@@ -141,60 +140,112 @@
             </div>
           </div>
         </div>
-        <!--  End of Sports Menu Dropdown  -->
-        
+        <!--  End of Sports menu dropdown  -->
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Category 2
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-4">
-                <span class="text-uppercase text-white">Category 2</span>
-                <ul class="nav flex-column">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link item</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link item</a>
-                </li>
-              </ul>
-              </div>
-              <!-- /.col-md-4  -->
-              <div class="col-md-4">
-                <ul class="nav flex-column">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link item</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link item</a>
-                </li>
-              </ul>
-              </div>
-              <!-- /.col-md-4  -->
-              <div class="col-md-4">
-                <a href="">
-                  <img src="https://dummyimage.com/200x100/ccc/000&text=image+link" alt="" class="img-fluid">
-                </a>
-                <p class="text-white">Short image call to action</p>
 
-              </div>
-              <!-- /.col-md-4  -->
+      <!--  Facilities  -->
+      <li class="nav-item dropdown active-nav">
+        <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/facilities" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
+      <!--  Facilities dropdown menu  -->
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 d-none d-md-block">
+              <a href="">
+                <img src="assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+              </a>
             </div>
+            <!-- /.col-md-4  -->
+            <div class="col-md-8">
+              <ul class="nav flex-column">
+              <li class="nav-list">
+                <div class="row nav-row facilities-drop-pad">
+                  <div class="col-md-3">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/fitness-center"><strong>Fitness Center</strong></a>
+                  </div>
+                  <div class="col-md-2 d-none d-md-block">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/fitness-center#membership">Membership</a>
+                  </div>
+                  <div class="col-md-3 d-none d-md-block">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/fitness-center#trainers">Personal Trainers</a>
+                  </div>
+                  <div class="col-md-2 d-none d-md-block">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/fitness-center#testimonials">Testimonials</a>
+                  </div>
+                  <div class="col-md-1 d-none d-md-block">
+                  </div>
+                </div>
+              </li>
+              <li class="nav-list">
+                <div class="row nav-row">
+                  <div class="col-md-3">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities"><strong>Sports Facilities</strong></a>
+                  </div>
+                  <div class="col-md-2 d-none d-md-block">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#ryan">Ryan&#160;Activities Center</a>
+                  </div>
+                  <div class="col-md-2 d-none d-md-block">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#baseball">Baseball&#160;Field</a>
+                  </div>
+                  <div class="col-md-2 d-none d-md-block">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#soccer">Soccer&#160;Field</a>
+                  </div>
+                  <div class="col-md-2 d-none d-md-block">
+                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#softball">Softball&#160;Field</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            </div>
+            <!-- /.col-md-8  -->
           </div>
-          <!--  /.container  -->
-
-
         </div>
-      </li>
+      </div>
+      <!--  End of Facilities menu dropdown  -->
+    </li>
+
+    <!--  Recruitment  -->
+    <li class="nav-item">
+      <a class="nav-link" href="http://athletics.kcc.edu/recruit">Recruitment</a>
+    </li>
+
+    <!--  Donate  -->
+    <li class="nav-item dropdown active-nav">
+      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/donate" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Donate</a>
+    <!--  Donate dropdown menu  -->
+    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 d-none d-md-block">
+            <a href="">
+              <img src="assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+            </a>
+          </div>
+          <!-- /.col-md-4  -->
+          <div class="col-md-8">
+            <ul class="nav flex-column">
+            <li class="nav-list">
+              <div class="row nav-row donate-drop-pad">
+                <div class="col-md-12">
+                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/cash-bash"><strong>Cash Bash</strong></a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-list">
+              <div class="row nav-row">
+                <div class="col-md-12">
+                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities"><strong>Cavalier Classic Golf Outing</strong></a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          </div>
+          <!-- /.col-md-8  -->
+        </div>
+      </div>
+    </div>
+    <!--  End of Donate menu dropdown  -->
+    </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Category 3
