--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,6 @@
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
-
+        <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     </head>
     <body id="page-top">
