--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand" href="#">Mega Dropdown</a>
+  <a class="navbar-brand cavs-link" href="http://athletics.kcc.edu"><img src="/assets/img/cavaliers-logo.png" class="cavs-logo" alt="KCC Cavaliers Logo link to Athletics main page"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse clear-cavs" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <!--  Sports  -->
       <li class="nav-item dropdown active-nav">
@@ -234,7 +234,7 @@
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities"><strong>Cavalier Classic Golf Outing</strong></a>
+                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/cavalier-classic"><strong>Cavalier Classic Golf Outing</strong></a>
                 </div>
               </div>
             </li>
@@ -246,61 +246,59 @@
     </div>
     <!--  End of Donate menu dropdown  -->
     </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Category 3
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-
-          <div class="container">
-            <div class="row">
-              <div class="col-md-4">
-               <span class="text-uppercase text-white">Category 3</span>
-                <ul class="nav flex-column">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link item</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link item</a>
-                </li>
-              </ul>
-              </div>
-              <!-- /.col-md-4  -->
-              <div class="col-md-4">
-                <ul class="nav flex-column">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link item</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link item</a>
-                </li>
-              </ul>
-              </div>
-              <!-- /.col-md-4  -->
-              <div class="col-md-4">
-                <a href="">
-                  <img src="https://dummyimage.com/200x100/ccc/000&text=image+link" alt="" class="img-fluid">
-                </a>
-                <p class="text-white">Short image call to action</p>
-
-              </div>
-              <!-- /.col-md-4  -->
-            </div>
+    <!--  About Athletics  -->
+    <li class="nav-item dropdown active-nav">
+      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/about" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Athletics</a>
+    <!--  About Athletics dropdown menu  -->
+    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 d-none d-md-block">
+            <a href="">
+              <img src="assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+            </a>
           </div>
-          <!--  /.container  -->
+          <!-- /.col-md-4  -->
+          <div class="col-md-8">
+            <ul class="nav flex-column">
+            <li class="nav-list">
+              <div class="row nav-row about-drop-pad">
+                <div class="col-md-12">
+                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/student-athletes"><strong>Student-Athlete Experience</strong></a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-list">
+              <div class="row nav-row">
+                <div class="col-md-12">
+                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/equity"><strong>Equity in Athletics</strong></a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-list">
+              <div class="row nav-row">
+                <div class="col-md-12">
+                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/staff"><strong>Staff Directory</strong></a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-list">
+              <div class="row nav-row">
+                <div class="col-md-12">
+                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/staff"><strong>Alumni Survey</strong></a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          </div>
+          <!-- /.col-md-8  -->
         </div>
-      </li>
+      </div>
+    </div>
+    <!--  End of Donate menu dropdown  -->
+    </li>
+    <!--  End Navigation Menu links  -->
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
