Add 'Upcoming Games Card' to index's content.
Add @rehmpke's data table container to card

Remove Portfolio Modal content from index via comment
Portfolio Modal code may be used later

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,5 +2,5 @@
   {% include global-nav.html %}
   {% include mega-nav.html %}
   {% include header.html %}
-  {% include services.html %}
+  {{ content }}
 {% include foot.html %}
