Add comment to header.masthead's margin-top
Margin-top is needed so the Hero banner clears the sticky navigation

--- a/assets/scss/4-layout/_header.scss
+++ b/assets/scss/4-layout/_header.scss
@@ -8,7 +8,7 @@ header.masthead {
   -o-background-size: 100% auto;
   background-size: 100% auto;
   color: #fff;
-  margin-top: 112px;
+  margin-top: 110px; // margin-top for clearing the sticky nav
   text-align: center;
 }
 
