Position the Navigation's Cavaliers logo above open dropdown menu's
Give .cavs-logo a z-index and high z-index value
Add comment for purpose of .clear-cavs class

--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -123,6 +123,7 @@
   position: absolute;
   top: 15px;
   width: 150px;
+  z-index: 9999;
 }
 @media screen and (min-width: 992px) {
   .cavs-logo {
@@ -131,6 +132,7 @@
   }
 }
 
+// Push the Navigation links to the right to clear the Cavaliers logo (for non mobile/tablet devices):
 @media screen and (min-width: 992px) {
   .clear-cavs {
     margin-left: 15%;
