--- a/assets/scss/4-layout/_header.scss
+++ b/assets/scss/4-layout/_header.scss
@@ -1,5 +1,5 @@
 header.masthead {
-  background-image: url(/assets/img/header-bg.jpg);
+  background-image: url(../../assets/img/header-bg.jpg);
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center top;
